# mortis-launcher

./: LICENSE  README  README.md  TODO.txt  cross_x64.txt  cross_x86.txt  meson.build
headers/: pch.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: main.cpp
src/app/: Application.cpp  Application.h
src/core/: GameDatabase.h  GameLauncher.cpp  GameLauncher.h  Version.h  Window.cpp  Window.h
src/graphics/: Renderer.cpp  Renderer.h
src/ui/: Theme.cpp  Theme.h  UIManager.cpp  UIManager.h
